--- a/MakeFile
+++ b/MakeFile
@@ -1,2 +1,34 @@
-a:
-	gcc -shared -o matply.dll  matply.c Auxiliary.c
+# Makefile for building matply.dll
+
+# Compiler
+CC = gcc
+
+# Compiler flags
+CFLAGS = -shared
+
+# Source files
+SRCS = matply.c Auxiliary.c
+
+# Object files
+OBJS = $(SRCS:.c=.o)
+
+# Output library
+OUTPUT = matply.dll
+
+# Default target
+all: $(OUTPUT)
+
+# Rule to build the output library
+$(OUTPUT): $(OBJS)
+	$(CC) $(CFLAGS) -o $@ $^
+
+# Rule to compile source files into object files
+%.o: %.c
+	$(CC) -c $(CFLAGS) -o $@ $<
+
+# Clean rule
+clean:
+	rm -f $(OBJS) $(OUTPUT)
+
+# Phony targets
+.PHONY: all clean
