--- a/matply/pubspec.yaml
+++ b/matply/pubspec.yaml
@@ -5,7 +5,7 @@ description: "Dart Matrix realized by C Dll"
 
 repository: https://github.com/PythonnotJava/MatPly
 
-version: 1.0.6
+version: 1.0.7
 environment:
   sdk: '>=3.1.0 <4.0.0'
 
@@ -15,3 +15,5 @@ dependencies:
 
 platforms:
   windows:
+  android:
+  linux:
